# abb-bot

./: LICENSE  main.py  pyproject.toml
scripts/: __init__.py  fill_missing_data_abante.py  scrape_abante.py  scrape_abante2.py  scrape_abante_cloudinary.py  test_scrape.py
src/core/: article_aggregator.py
src/models/: __init__.py  article.py  website.py
src/scrapers/: __init__.py  non_async.py
tests/: __init__.py
tests/models/: __init__.py  test_article_model.py
tests/scrapers/: test_non_async.py
