[project]
name = "abb-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]

classifiers = ["Private :: Do Not Upload"]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select=["ALL"]
ignore = ["S101", "INP001"]

[pytest]
testpaths = ["tests"]
